# AgenikPredict

./: .env.example  .gitignore  .railwayignore  AGPL_COMPLIANCE_CHECKLIST.md  AgenikPredict_Analysis_and_Marketing_Plan.md  Dockerfile  Dockerfile.production  Global_Marketing_Plan.docx  HeyGen_Plan_and_Assets.docx  LANDING_PAGE_COPY.md  LANDING_i18n_DE.json  LANDING_i18n_EN.json  LANDING_i18n_ES.json  LANDING_i18n_HE.json  LANDING_i18n_RU.json  Landing_Video_Script.docx  MODIFICATIONS.md  Market_Entry_Strategy.docx  NOTICE  PLAN_billing_integration.md  PRIVACY_POLICY.md  README.md  ROADMAP.md  TERMS_OF_USE.md  docker-compose.yml  package.json  railway.toml
backend/: .gitignore  pyproject.toml  requirements.txt  run.py  worker.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  auth.py  billing.py  graph.py  market.py  report.py  simulation.py
backend/app/data/: historical_backtest_cases.json
backend/app/models/: historical_backtest.py  prediction_ledger.py  project.py  task.py  user.py
backend/app/services/: artifact_store.py  email_service.py  graph_builder.py  live_evidence.py  market_data.py  oasis_profile_generator.py  ontology_generator.py  perplexity_provider.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  source_manifest.py  task_handlers.py  task_worker.py  text_processor.py  zep_tools.py  (+2 more)
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: test_report_upgrade.py
(+69 files in other folders)
